objects/Substage__c.object
<CustomObject>
    <description>Holds the list of substages under each stage</description>
    <fields>
        <fullName>Closed_Lost_Substage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checked if stage is closed or lost</description>
        <label>Closed Lost Substage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <description>Add insite url and images for each Substages</description>
        <inlineHelpText>Please enter a valid URL address.</inlineHelpText>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>parent stage of substage</description>
        <label>Stage</label>
        <referenceTo>Stage__c</referenceTo>
        <relationshipLabel>Substages</relationshipLabel>
        <relationshipName>Substages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Substage_Sort_Order__c</fullName>
        <description>order of a substage</description>
        <label>Substage Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <description>Task Type</description>
        <inlineHelpText>Task Type</inlineHelpText>
        <label>Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Best Practices</fullName>
                </value>
                <value>
                    <fullName>Other Applications</fullName>
                </value>
                <value>
                    <fullName>Tools, Templates, Forms</fullName>
                </value>
                <value>
                    <fullName>Scripting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verifiable_Outcome__c</fullName>
        <description>verifiable outcome of substage</description>
        <label>Verifiable Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Substage</label>
    <nameField>
        <label>Substage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Substages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>